--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,8 @@
 main:
   - title: "Posts"
     url: /posts/
-  - title: "Categories"
-    url: /categories/
+  - title: "Pricing"
+    url: /pricing/
   - title: "Tags"
     url: /tags/
   - title: "About"
