--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,8 @@ description: >- # this means to ignore newlines until "baseurl:" Write an awesom
   SaaS based continous security validation, continuous security monitoring, and threat centric testing.
 twitter_username: username
 github_username: username
-minimal_mistakes_skin: default
+# minimal_mistakes_skin: default
+minimal_mistakes_skin: contrast
 search: true
 
 # Build settings
