--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ twitter_username: username
 github_username: username
 # minimal_mistakes_skin: default
 minimal_mistakes_skin: contrast
-search: true
+search: false
 
 # Build settings
 markdown: kramdown
