--- a/_config.yml
+++ b/_config.yml
@@ -19,8 +19,8 @@ description: # this means to ignore newlines until "baseurl:" Write an awesome d
   SaaS based continous security validation, continuous security monitoring, and threat centric testing.
 twitter_username: username
 github_username: username
-minimal_mistakes_skin: default
-# minimal_mistakes_skin: contrast
+# minimal_mistakes_skin: default
+minimal_mistakes_skin: contrast
 search: false
 
 # Build settings
@@ -61,9 +61,6 @@ author:
   avatar : "/assets/images/bio-photo.jpg"
   bio    : "My awesome biography constrained to a sentence or two goes here."
   links:
-    - label: "Website"
-      icon: "fas fa-fw fa-link"
-      url: "https://"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       url: "https://twitter.com/"
@@ -71,7 +68,7 @@ author:
       icon: "fab fa-fw fa-github"
       url: "https://github.com/"
     - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
+      icon: "fab fa-fw fa-linkedin"
       url: "https://instagram.com/"
 
 footer:
