--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ footer:
       icon: "fab fa-fw fa-github"
       url: "https://github.com/"
     - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
+      icon: "fab fa-fw fa-linkedin"
       url: "https://instagram.com/"
 
 defaults:
