--- a/_config.yml
+++ b/_config.yml
@@ -79,16 +79,16 @@ footer:
 
 defaults:
   # _posts
-  # - scope:
-  #     path: ""
-  #     type: posts
-  #   values:
-  #     layout: single
-  #     author_profile: false
-  #     read_time: true
-  #     comments: true
-  #     share: false
-  #     related: true
+  - scope:
+      path: ""
+      type: posts
+    values:
+      layout: single
+      author_profile: false
+      read_time: true
+      comments: true
+      share: false
+      related: true
   # _pages
   - scope:
       path: "_pages"
