--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ description: # this means to ignore newlines until "baseurl:" Write an awesome d
 twitter_username: username
 github_username: username
 # minimal_mistakes_skin: "default"
-minimal_mistakes_skin: "dirt"
+minimal_mistakes_skin: "contrast"
 search: false
 
 # Build settings
