--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 main:
   - title: "Pricing"
     url: /pricing/
-  - title: "Features"
-    url: /features/
-  - title: "Blog"
-    url: /posts/
+  - title: "About"
+    url: /about/
+  # - title: "Blog"
+  #   url: /posts/
