--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 main:
-  - title: "Pricing"
+  - title: "pricing"
     url: /pricing/
-  - title: "About"
+  - title: "about"
     url: /about/
   # - title: "Blog"
   #   url: /posts/
