--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 
 # Google Analytics:
-# google_analytics: UA—188314022-1
+google_analytics: UA—188314022-1
 
 title: Securiful Inc. 
 email:
