--- a/_config.yml
+++ b/_config.yml
@@ -14,8 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-# Google Analytics:
-google_analytics: UA—188314022-1
+
 
 title: Securiful Inc. 
 email:
@@ -108,3 +107,9 @@ category_archive:
 tag_archive:
   type: liquid
   path: /tags/
+
+# Analytics Section:
+analytics:
+  provider: "google-universal"
+  google:
+  tracking_id: "UA-188314022-1"
