--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ description: # this means to ignore newlines until "baseurl:" Write an awesome d
   SaaS based continous security validation, continuous security monitoring, and threat centric testing.
 twitter_username: username
 github_username: username
-# minimal_mistakes_skin: "default"
-minimal_mistakes_skin: "air"
+minimal_mistakes_skin: "default"
+# minimal_mistakes_skin: "air"
 # minimal_mistakes_skin: "contrast"
 search: false
 
