--- a/_config.yml
+++ b/_config.yml
@@ -82,18 +82,18 @@ footer:
       url: "https://www.linkedin.com/company/securiful-inc/"
 
 defaults:
-  # _posts
-  - scope:
-      path: ""
-      type: posts
-    values:
-      layout: single
-      author_profile: false
-      read_time: true
-      comments: true
-      share: false
-      related: true
-  # _pages
+  ### _posts
+  # - scope:
+  #     path: ""
+  #     type: posts
+  #   values:
+  #     layout: single
+  #     author_profile: false
+  #     read_time: true
+  #     comments: true
+  #     share: false
+  #     related: true
+  ### _pages
   - scope:
       path: "_pages"
       type: pages
