--- a/_config.yml
+++ b/_config.yml
@@ -101,10 +101,10 @@ defaults:
       layout: single
       author_profile: false
 
-category_archive:
-  type: liquid
-  path: /categories/
-tag_archive:
-  type: liquid
-  path: /tags/
+# category_archive:
+#   type: liquid
+#   path: /categories/
+# tag_archive:
+#   type: liquid
+#   path: /tags/
 
