--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 title: Securiful Inc. 
 email:
 description: # this means to ignore newlines until "baseurl:" Write an awesome description for your new site here. This will appear in your document head meta (for Google search results) and in your feed.xml site description.
-  SaaS based continous security validation, continuous security monitoring, and threat centric testing.
+  Enterprise security validation, continuous security monitoring, and threat based testing.
 twitter_username: username
 github_username: username
 minimal_mistakes_skin: "default"
