--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 title: Securiful Inc. 
 email:
 description: # this means to ignore newlines until "baseurl:" Write an awesome description for your new site here. This will appear in your document head meta (for Google search results) and in your feed.xml site description.
-  Validate your information security architecture using our on demand and continuous security validation platform . Perform continuous information security monitoring to ensure compliance, and perform on demand threat based tests to assure you can defend against real-life adversaries. 
+  Continously validate your information security architecture using our on demand breach and attack simulation application. Perform continuous security validation and monitoring to ensure compliance, and perform on demand threat based tests to assure you can defend against real-life adversaries. 
 twitter_username: username
 github_username: username
 minimal_mistakes_skin: "default"
