--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 title: Securiful Inc. 
 email:
 description: # this means to ignore newlines until "baseurl:" Write an awesome description for your new site here. This will appear in your document head meta (for Google search results) and in your feed.xml site description.
-  Continously validate your information security architecture using our on demand breach and attack simulation application. Perform continuous security validation and monitoring to ensure compliance, and perform on demand threat based tests to assure you can defend against real-life adversaries. 
+  Test, understand, and track your attack surface in order to implement information security controls that are relevant in driving return on security investment.
 twitter_username: username
 github_username: username
 minimal_mistakes_skin: "default"
