--- a/_config.yml
+++ b/_config.yml
@@ -89,10 +89,10 @@ defaults:
       type: posts
     values:
       layout: single
-      author_profile: false
+      author_profile: true
       read_time: true
       comments: true
-      share: false
+      share: true
       related: true
   ### _pages
   - scope:
