--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 main:
   - title: "pricing"
     url: /pricing/
+  - title: "blog"
+    url: /posts/
   - title: "about"
     url: /about/
-  - title: "Blog"
-    url: /posts/
