--- a/_config.yml
+++ b/_config.yml
@@ -23,9 +23,9 @@ description: # this means to ignore newlines until "baseurl:" Write an awesome d
   # Test, understand, and track your attack surface in order to implement information security controls that are relevant in driving return on security investment.
 twitter_username: username
 github_username: username
-# minimal_mistakes_skin: "default"
+minimal_mistakes_skin: "default"
 # minimal_mistakes_skin: "air"
-minimal_mistakes_skin: "contrast"
+# minimal_mistakes_skin: "contrast"
 search: false
 
 # Build settings
