--- a/_config.yml
+++ b/_config.yml
@@ -64,7 +64,7 @@ plugins:
 author:
   name   : "Sven Eidissen"
   avatar : "/assets/images/bio-photo.jpg"
-  bio    : "Father, husband, security wizard. I help people see beyond the security horizon."
+  bio    : "Father, husband, security pro. I help people see beyond the security horizon."
   links:
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
