--- a/_config.yml
+++ b/_config.yml
@@ -102,9 +102,9 @@ defaults:
       layout: single
       author_profile: false
 
-# category_archive:
-#   type: liquid
-#   path: /categories/
+category_archive:
+  type: liquid
+  path: /categories/
 # tag_archive:
 #   type: liquid
 #   path: /tags/
