--- a/_config.yml
+++ b/_config.yml
@@ -100,8 +100,8 @@ defaults:
       path: "_pages"
       type: pages
     values:
-      # layout: single
-      layout: splash
+      layout: single
+      # layout: splash
       author_profile: false
 
 # category_archive:
