--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,5 +5,5 @@ main:
     url: /pricing/
   - title: "about"
     url: /about/
-  - title: "requested tests"
-    url: /requested-tests/
+  - title: "Proposed Tests"
+    url: /proposed-tests/
