--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,5 +5,5 @@ main:
     url: /pricing/
   - title: "about"
     url: /about/
-  - title: "Proposed Tests"
+  - title: "proposed tests"
     url: /proposed-tests/
