--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ description: # this means to ignore newlines until "baseurl:" Write an awesome d
 twitter_username: username
 github_username: username
 # minimal_mistakes_skin: "default"
-minimal_mistakes_skin: "air"
-# minimal_mistakes_skin: "contrast"
+# minimal_mistakes_skin: "air"
+minimal_mistakes_skin: "contrast"
 search: false
 
 # Build settings
