--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 
 
 
-title: Securiful - Security Fulfilled
+# title: Securiful - Security Fulfilled
 email:
 description: # this means to ignore newlines until "baseurl:" Write an awesome description for your new site here. This will appear in your document head meta (for Google search results) and in your feed.xml site description.
   Test driven security assessment application. Perform quick security assessments to track security controls and ensure the highest return on security investment.
